修改docker自动启动,修改apigateway ocelot指向错误

--- a/docker-deploy/company6/docker-compose.yml
+++ b/docker-deploy/company6/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - dmzdevnet
       - dmzehomenet
       - twdevnet
-
+    restart: always
 ######################################################################################
 
 # MoreJee Consul ( For Company Development )
@@ -28,6 +28,7 @@ services:
       - "8500:8500"
     networks:
       - dmzdevnet
+    restart: always
 # MoreJee APIGateway ( For Company Development )
   apps-apigateway-dev:
     container_name: apps-apigateway-dev-c
@@ -44,6 +45,7 @@ services:
       - dmzconsulservice-dev
       - apps-legacy-basic-service-dev
       - apps-oms-service-dev
+    restart: always
 # MoreJee APIServer ( For Company Development )
   apps-legacy-basic-service-dev:
     container_name: apps-legacy-basic-service-dev-c
@@ -53,6 +55,7 @@ services:
       - "/var/bamboo/dmzapiserver/AppBackup:/app/wwwroot/AppBackup"
       - "/var/bamboo/dmzapiserver/wwwroot/upload:/app/wwwroot/upload"
     environment:
+      - ASPNETCORE_ENVIRONMENT=Development
       # JwtSettings
       - JwtSettings:Issuer=${JwtSettings_Issuer_Dev}
       - JwtSettings:Audience=${JwtSettings_Audience_Dev}
@@ -76,6 +79,7 @@ services:
       - dmzpostgresdb
       - apps-morejee-tool-dev
       - dmzconsulservice-dev
+    restart: always
 # MoreJee ToolSite ( For Company Development )
   apps-morejee-tool-dev:
     container_name: apps-morejee-tool-dev-c
@@ -86,6 +90,7 @@ services:
       - "5703:4000"
     networks:
       - dmzdevnet
+    restart: always
 # MoreJee OMS APIServer ( For Company Development )
   apps-oms-service-dev:
     container_name: apps-oms-service-dev-c
@@ -118,6 +123,7 @@ services:
     depends_on:
       - dmzpostgresdb
       - dmzconsulservice-dev
+    restart: always
 # MoreJee Site ( For Company Development )
   apps-morejee-site-dev:
     container_name: apps-morejee-site-dev-c
@@ -130,7 +136,7 @@ services:
       - "5705:4000"
     networks:
       - dmzdevnet
-
+    restart: always
 ######################################################################################
 
 # # MoreJee Consul ( For Company EHome )
@@ -249,118 +255,118 @@ services:
 
 ######################################################################################
       
-# TaiWan Consul ( For TaiWan Development )
-  dmzconsulservice-tw:
-    image: consul:latest
-    container_name: dmzconsulservice-tw-c
-    command: agent -dev -client=0.0.0.0 -bind=0.0.0.0
-    ports:
-      - "8502:8500"
-    networks:
-      - twdevnet
-# TaiWan APIGateway ( For TaiWan Development )
-  apps-apigateway-tw:
-    container_name: apps-apigateway-tw-c
-    image: apps-base-apigateway:latest
-    ports:
-      - "5901:80"
-    volumes:
-      - "/var/bamboo/twapigateway/logs:/app/logs"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=TaiWan
-    networks:
-      - twdevnet
-    depends_on:
-      - dmzconsulservice-tw
-      - apps-legacy-basic-service-tw
-      - apps-oms-service-tw
+# # TaiWan Consul ( For TaiWan Development )
+#   dmzconsulservice-tw:
+#     image: consul:latest
+#     container_name: dmzconsulservice-tw-c
+#     command: agent -dev -client=0.0.0.0 -bind=0.0.0.0
+#     ports:
+#       - "8502:8500"
+#     networks:
+#       - twdevnet
+# # TaiWan APIGateway ( For TaiWan Development )
+#   apps-apigateway-tw:
+#     container_name: apps-apigateway-tw-c
+#     image: apps-base-apigateway:latest
+#     ports:
+#       - "5901:80"
+#     volumes:
+#       - "/var/bamboo/twapigateway/logs:/app/logs"
+#     environment:
+#       - ASPNETCORE_ENVIRONMENT=TaiWan
+#     networks:
+#       - twdevnet
+#     depends_on:
+#       - dmzconsulservice-tw
+#       - apps-legacy-basic-service-tw
+#       - apps-oms-service-tw
 
-# TaiWan APIServer ( For TaiWan Development )
-  apps-legacy-basic-service-tw:
-    container_name: apps-legacy-basic-service-tw-c
-    image: apps-legacy-basic-service:latest
-    volumes:
-      - "/var/bamboo/twapiserver/logs:/app/logs"
-      - "/var/bamboo/twapiserver/AppBackup:/app/wwwroot/AppBackup"
-      - "/var/bamboo/twapiserver/wwwroot/upload:/app/wwwroot/upload"
-    environment:
-      # JwtSettings
-      - JwtSettings:Issuer=${JwtSettings_Issuer_Taiwan}
-      - JwtSettings:Audience=${JwtSettings_Audience_Taiwan}
-      - JwtSettings:SecretKey=${JwtSettings_SecretKey_Taiwan}
-      - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay_Taiwan}
-      # ConnectionString
-      - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=${ServerDB_Taiwan};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
-      # Plugins
-      - Plugins:OrderViewer=${Plugins_OrderViewer_Taiwan}
-      - Plugins:MediaShare=${Plugins_MediaShare_Taiwan}
-      # Consul
-      - ConsulConfig:Server:IP=dmzconsulservice-tw
-      - ConsulConfig:Server:Port=8500
-      - ConsulConfig:Client:IP=apps-legacy-basic-service-tw
-      - ConsulConfig:Client:Port=80
-    ports:
-      - "5902:80"
-    networks:
-      - twdevnet
-    depends_on:
-      - dmzpostgresdb
-      - apps-morejee-tool-tw
-      - dmzconsulservice-tw
-# TaiWan ToolSite ( For TaiWan Development )
-  apps-morejee-tool-tw:
-    container_name: apps-morejee-tool-tw-c
-    image: apps-morejee-tool-site:latest
-    environment:
-      - APISERVER=${APIGatewayServer_Taiwan}
-    ports:
-      - "5903:4000"
-    networks:
-      - twdevnet
-# TaiWan OMS APIServer ( For TaiWan Development )
-  apps-oms-service-tw:
-    container_name: apps-oms-service-tw-c
-    image: apps-oms-service:latest
-    volumes:
-      - "/var/bamboo/twomsserver/logs:/app/logs"
-      - "/var/bamboo/twomsserver/AppBackup:/app/wwwroot/AppBackup"
-    environment:
-      # JwtSettings
-      - JwtSettings:Issuer=${JwtSettings_Issuer_Taiwan}
-      - JwtSettings:Audience=${JwtSettings_Audience_Taiwan}
-      - JwtSettings:SecretKey=${JwtSettings_SecretKey_Taiwan}
-      - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay_Taiwan}
-      # ConnectionString
-      - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=${OMSServerDB_Taiwan};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
-      # Plugins
-      - Plugins:OrderViewer=${Plugins_OrderViewer_Taiwan}
-      - Plugins:MediaShare=${Plugins_MediaShare_Taiwan}
-      # APIGateway
-      - APIGatewayServer=${APIGatewayServer_Taiwan}
-      # Consul
-      - ConsulConfig:Server:IP=dmzconsulservice-tw
-      - ConsulConfig:Server:Port=8500
-      - ConsulConfig:Client:IP=apps-oms-service-tw
-      - ConsulConfig:Client:Port=80
-    ports:
-      - "5904:80"
-    networks:
-      - twdevnet
-    depends_on:
-      - dmzpostgresdb
-      - dmzconsulservice-tw
-# TaiWan Site ( For TaiWan Development )
-  apps-morejee-site-tw:
-    container_name: apps-morejee-site-tw-c
-    image: apps-morejee-site:latest
-    environment:
-      - APISERVER=${APIGatewayServer_Taiwan}
-      - TOOLSERVER=${TaiWanToolSite_Taiwan}
-      - SECRETKEY=${SECRETKEY_Taiwan}
-    ports:
-      - "5905:4000"
-    networks:
-      - twdevnet
+# # TaiWan APIServer ( For TaiWan Development )
+#   apps-legacy-basic-service-tw:
+#     container_name: apps-legacy-basic-service-tw-c
+#     image: apps-legacy-basic-service:latest
+#     volumes:
+#       - "/var/bamboo/twapiserver/logs:/app/logs"
+#       - "/var/bamboo/twapiserver/AppBackup:/app/wwwroot/AppBackup"
+#       - "/var/bamboo/twapiserver/wwwroot/upload:/app/wwwroot/upload"
+#     environment:
+#       # JwtSettings
+#       - JwtSettings:Issuer=${JwtSettings_Issuer_Taiwan}
+#       - JwtSettings:Audience=${JwtSettings_Audience_Taiwan}
+#       - JwtSettings:SecretKey=${JwtSettings_SecretKey_Taiwan}
+#       - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay_Taiwan}
+#       # ConnectionString
+#       - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=${ServerDB_Taiwan};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
+#       # Plugins
+#       - Plugins:OrderViewer=${Plugins_OrderViewer_Taiwan}
+#       - Plugins:MediaShare=${Plugins_MediaShare_Taiwan}
+#       # Consul
+#       - ConsulConfig:Server:IP=dmzconsulservice-tw
+#       - ConsulConfig:Server:Port=8500
+#       - ConsulConfig:Client:IP=apps-legacy-basic-service-tw
+#       - ConsulConfig:Client:Port=80
+#     ports:
+#       - "5902:80"
+#     networks:
+#       - twdevnet
+#     depends_on:
+#       - dmzpostgresdb
+#       - apps-morejee-tool-tw
+#       - dmzconsulservice-tw
+# # TaiWan ToolSite ( For TaiWan Development )
+#   apps-morejee-tool-tw:
+#     container_name: apps-morejee-tool-tw-c
+#     image: apps-morejee-tool-site:latest
+#     environment:
+#       - APISERVER=${APIGatewayServer_Taiwan}
+#     ports:
+#       - "5903:4000"
+#     networks:
+#       - twdevnet
+# # TaiWan OMS APIServer ( For TaiWan Development )
+#   apps-oms-service-tw:
+#     container_name: apps-oms-service-tw-c
+#     image: apps-oms-service:latest
+#     volumes:
+#       - "/var/bamboo/twomsserver/logs:/app/logs"
+#       - "/var/bamboo/twomsserver/AppBackup:/app/wwwroot/AppBackup"
+#     environment:
+#       # JwtSettings
+#       - JwtSettings:Issuer=${JwtSettings_Issuer_Taiwan}
+#       - JwtSettings:Audience=${JwtSettings_Audience_Taiwan}
+#       - JwtSettings:SecretKey=${JwtSettings_SecretKey_Taiwan}
+#       - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay_Taiwan}
+#       # ConnectionString
+#       - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=${OMSServerDB_Taiwan};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
+#       # Plugins
+#       - Plugins:OrderViewer=${Plugins_OrderViewer_Taiwan}
+#       - Plugins:MediaShare=${Plugins_MediaShare_Taiwan}
+#       # APIGateway
+#       - APIGatewayServer=${APIGatewayServer_Taiwan}
+#       # Consul
+#       - ConsulConfig:Server:IP=dmzconsulservice-tw
+#       - ConsulConfig:Server:Port=8500
+#       - ConsulConfig:Client:IP=apps-oms-service-tw
+#       - ConsulConfig:Client:Port=80
+#     ports:
+#       - "5904:80"
+#     networks:
+#       - twdevnet
+#     depends_on:
+#       - dmzpostgresdb
+#       - dmzconsulservice-tw
+# # TaiWan Site ( For TaiWan Development )
+#   apps-morejee-site-tw:
+#     container_name: apps-morejee-site-tw-c
+#     image: apps-morejee-site:latest
+#     environment:
+#       - APISERVER=${APIGatewayServer_Taiwan}
+#       - TOOLSERVER=${TaiWanToolSite_Taiwan}
+#       - SECRETKEY=${SECRETKEY_Taiwan}
+#     ports:
+#       - "5905:4000"
+#     networks:
+#       - twdevnet
 
 ######################################################################################
 
@@ -373,6 +379,7 @@ services:
       - "8503:8500"
     networks:
       - dmzdevnet
+    restart: always
 # MoreJee APIGateway ( For Leon )
   apps-apigateway-leon:
     container_name: apps-apigateway-leon-c
@@ -389,6 +396,7 @@ services:
       - dmzconsulservice-leon
       - apps-legacy-basic-service-leon
       - apps-oms-service-leon
+    restart: always
 # MoreJee APIServer ( For Leon )
   apps-legacy-basic-service-leon:
     container_name: apps-legacy-basic-service-leon-c
@@ -421,6 +429,7 @@ services:
       - dmzpostgresdb
       - apps-morejee-tool-leon
       - dmzconsulservice-leon
+    restart: always
 # MoreJee ToolSite ( For Leon )
   apps-morejee-tool-leon:
     container_name: apps-morejee-tool-leon-c
@@ -431,6 +440,7 @@ services:
       - "5733:4000"
     networks:
       - dmzdevnet
+    restart: always
 # MoreJee OMS APIServer ( For Leon )
   apps-oms-service-leon:
     container_name: apps-oms-service-leon-c
@@ -463,6 +473,7 @@ services:
     depends_on:
       - dmzpostgresdb
       - dmzconsulservice-leon
+    restart: always
 # MoreJee Site ( For Leon )
   apps-morejee-site-leon:
     container_name: apps-morejee-site-leon-c
@@ -475,6 +486,7 @@ services:
       - "5735:4000"
     networks:
       - dmzdevnet
+    restart: always
 
 networks:
   dmzdevnet:
