--- a/apps-common/Apps.Base.APIGateway/Dockerfile
+++ b/apps-common/Apps.Base.APIGateway/Dockerfile
@@ -8,7 +8,7 @@ COPY apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj apps-common/Ap
 RUN dotnet restore apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj
 COPY . .
 WORKDIR /src/apps-common/Apps.Base.APIGateway
-RUN dotnet build Apps.Base.APIGateway.csproj -c Release -o /app
+# RUN dotnet build Apps.Base.APIGateway.csproj -c Release -o /app
 
 FROM build AS publish
 RUN dotnet publish Apps.Base.APIGateway.csproj -c Release -o /app
