--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,32 @@ version: '3.4'
 
 services:
 
-  app-infrastructure-apigateway:
-    image: ${DockerHub_Registry}/app-infrastructure-apigateway:${DockerImage_Tag}
+  apps-base-apigateway:
+    image: apps-base-apigateway:latest
     build:
       context: .
       dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
-  app-microservice-basic-api:
-    image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
-    build:
-      context: .
-      dockerfile: apps-legacy/ApiServer/Dockerfile
+  # app-infrastructure-apigateway:
+  #   image: ${DockerHub_Registry}/app-infrastructure-apigateway:${DockerImage_Tag}
+  #   build:
+  #     context: .
+  #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
-  app-microservice-oms-api:
-    image: ${DockerHub_Registry}/app-microservice-oms-api:${DockerImage_Tag}
-    build:
-      context: .
-      dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
+  # app-microservice-basic-api:
+  #   image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
+  #   build:
+  #     context: .
+  #     dockerfile: apps-legacy/ApiServer/Dockerfile
 
-  basic-api-dev:
-    image: apps-legacy-basic-service:latest
-    build:
-      context: .
-      dockerfile: apps-legacy/ApiServer/Dockerfile
+  # app-microservice-oms-api:
+  #   image: ${DockerHub_Registry}/app-microservice-oms-api:${DockerImage_Tag}
+  #   build:
+  #     context: .
+  #     dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
+
+  # basic-api-dev:
+  #   image: apps-legacy-basic-service:latest
+  #   build:
+  #     context: .
+  #     dockerfile: apps-legacy/ApiServer/Dockerfile
