紧跟上,上面的有遗漏项

--- a/docker-deploy/norya/.env
+++ b/docker-deploy/norya/.env
@@ -22,5 +22,5 @@ JwtSettings_SecretKey=norya-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewerhttp://morejeetool.norya.cn:9522/dmz-oms/order-viewer
+Plugins_OrderViewer=http://morejeetool.norya.cn:9522/dmz-oms/order-viewer
 Plugins_MediaShare=http://morejeetool.norya.cn:9522/dmz-hd/share
