--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.4'
 
 services:
 
-  apps-base-apigateway:
-    image: apps-base-apigateway:latest
-    build:
-      context: .
-      dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
+  # apps-base-apigateway:
+  #   image: apps-base-apigateway:latest
+  #   build:
+  #     context: .
+  #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
   # app-infrastructure-apigateway:
   #   image: ${DockerHub_Registry}/app-infrastructure-apigateway:${DockerImage_Tag}
@@ -14,11 +14,11 @@ services:
   #     context: .
   #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
-  # app-microservice-basic-api:
-  #   image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
-  #   build:
-  #     context: .
-  #     dockerfile: apps-legacy/ApiServer/Dockerfile
+  app-microservice-basic-api:
+    image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
+    build:
+      context: .
+      dockerfile: apps-legacy/ApiServer/Dockerfile
 
   # app-microservice-oms-api:
   #   image: ${DockerHub_Registry}/app-microservice-oms-api:${DockerImage_Tag}
