添加挪亚家订单导出工具部署

--- a/docker-deploy/norya-tmp/.env
+++ b/docker-deploy/norya-tmp/.env
@@ -16,6 +16,7 @@ SECRETKEY=company-norya-key
 APIGatewayServer=http://noryaapi.damaozhu.com.cn
 MoreJeeSite=http://noryaadmin.damaozhu.com.cn
 MoreJeeToolSite=http://noryatool.damaozhu.com.cn
+MoreJeeOMSToolSite=http://omstool.damaozhu.com.cn/dmz/oms/norya/order2excel
 JwtSettings_Issuer=damaozhu.com.cn
 JwtSettings_Audience=damaozhu.com.cn
 JwtSettings_SecretKey=norya-production-app
