添加元皿服务器订单导出配置

--- a/docker-deploy/yuanmin/.env
+++ b/docker-deploy/yuanmin/.env
@@ -16,6 +16,7 @@ SECRETKEY=company-yuanmin-key
 APIGatewayServer=http://morejeeapi.ilivingonline.com
 MoreJeeSite=http://morejeeadmin.ilivingonline.com
 MoreJeeToolSite=http://morejeetool.ilivingonline.com
+MoreJeeOMSToolSite=http://omstool.ilivingonline.com/dmz/oms/yuanmin/order2excel
 JwtSettings_Issuer=ilivingonline.com
 JwtSettings_Audience=ilivingonline.com
 JwtSettings_SecretKey=yuanmin-production-app
