--- a/docker-deploy/yuanmin/docker-compose.yml
+++ b/docker-deploy/yuanmin/docker-compose.yml
@@ -119,6 +119,7 @@ services:
       - APISERVER=${APIGatewayServer}
       - TOOLSERVER=${MoreJeeToolSite}
       - SECRETKEY=${SECRETKEY}
+      - OMSORDER2EXCELTOOLSERVER=${MoreJeeOMSToolSite}
     ports:
       - "9521:4000"
     networks:
@@ -135,6 +136,15 @@ services:
     networks:
       - morejeenet
     restart: always
-
+# 3.3 oms tool site
+  app-site-morejee-oms-tool:
+    container_name: app-site-morejee-oms-tool-c
+    image: ${DockerHub_Registry}/app-site-morejee-oms-tool:${DockerImage_Tag}
+    ports:
+      - "9523:3000"
+    networks:
+      - morejeenet
+    restart: always
+    
 networks:
   morejeenet:
