完成挪亚家产品品号和订单格式的自定义

--- a/docker-deploy/norya-tmp/docker-compose.yml
+++ b/docker-deploy/norya-tmp/docker-compose.yml
@@ -131,6 +131,7 @@ services:
     image: ${DockerHub_Registry}/app-site-morejee-tool:${DockerImage_Tag}
     environment:
       - APISERVER=${APIGatewayServer}
+      - OMSTOOLSERVER=${MoreJeeOMSToolSite}
     ports:
       - "9522:4000"
     networks:
