--- a/apps-oms/Apps.OMS.Service/appsettings.Development.json
+++ b/apps-oms/Apps.OMS.Service/appsettings.Development.json
@@ -7,8 +7,10 @@
     }
   },
   //"ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz_oms;User Id=postgres;Password=root",
-  "ConnectionString": "Server=localhost;Port=5432;Database=dmz_oms;User Id=postgres;Password=root",
-  "APIGatewayServer": "http://testapi.damaozhu.com.cn",
+  //"ConnectionString": "Server=localhost;Port=5432;Database=dmz_oms;User Id=postgres;Password=root",
+  "ConnectionString": "Server=192.168.1.175;Port=9501;Database=appoms;User Id=postgres;Password=root",
+  //"APIGatewayServer": "http://testapi.damaozhu.com.cn",
+  "APIGatewayServer": "http://192.168.1.175:9503",
   "Plugins": {
     "OrderViewer": "http://testtool.damaozhu.com.cn/dmz-oms/order-viewer",
     "MediaShare": "http://testtool.damaozhu.com.cn/dmz-hd/share"
@@ -16,7 +18,7 @@
   "JwtSettings": {
     "Issuer": "damaozhu.com.cn",
     "Audience": "damaozhu.com.cn",
-    "SecretKey": "damaozhu-dev-test-app",
+    "SecretKey": "norya-production-app",
     "ExpiresDay": 1
   },
   "GuidSettings": {
@@ -26,8 +28,8 @@
   },
   "ConsulConfig": {
     "Server": {
-      "IP": "192.168.1.6",
-      "Port": "8500"
+      "IP": "192.168.1.175",
+      "Port": "9502"
     },
     "Client": {
       "IP": "192.168.1.176",
