修改norya docker-compose配置

--- a/docker-deploy/norya/.env
+++ b/docker-deploy/norya/.env
@@ -16,6 +16,7 @@ SECRETKEY=company-norya-key
 APIGatewayServer=http://morejeeapi.norya.cn:9503
 MoreJeeSite=http://morejeeadmin.norya.cn:9521
 MoreJeeToolSite=http://morejeetool.norya.cn:9522
+MoreJeeOMSToolSite=http://119.145.104.11:9523/dmz/oms/norya/order2excel
 JwtSettings_Issuer=norya.cn
 JwtSettings_Audience=norya.cn
 JwtSettings_SecretKey=norya-production-app
