为数据库添加自动备份功能

--- a/docker-deploy/norya-tmp/.env
+++ b/docker-deploy/norya-tmp/.env
@@ -13,15 +13,15 @@ PostgresDB_Password=root
 
 # 环境配置
 SECRETKEY=company-norya-key
-APIGatewayServer=http://noryaapi.damaozhu.com.cn
-MoreJeeSite=http://noryaadmin.damaozhu.com.cn
-MoreJeeToolSite=http://noryatool.damaozhu.com.cn
-MoreJeeOMSToolSite=http://omstool.damaozhu.com.cn/dmz/oms/norya/order2excel
-JwtSettings_Issuer=damaozhu.com.cn
-JwtSettings_Audience=damaozhu.com.cn
+APIGatewayServer=http://183.193.83.230:9503
+MoreJeeSite=http://183.193.83.230:9521
+MoreJeeToolSite=http://183.193.83.230:9522
+MoreJeeOMSToolSite=http://183.193.83.230:9523/dmz/oms/norya/order2excel
+JwtSettings_Issuer=norya.cn
+JwtSettings_Audience=norya.cn
 JwtSettings_SecretKey=norya-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://noryatool.damaozhu.com.cn/dmz-oms/order-viewer
-Plugins_MediaShare=http://noryatool.damaozhu.com.cn/dmz-hd/share
+Plugins_OrderViewer=http://183.193.83.230:9522/dmz-oms/order-viewer
+Plugins_MediaShare=http://183.193.83.230:9522/dmz-hd/share
