产品导入表格添加修改名称

--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -18,7 +18,7 @@
   },
   //"ConnectionString": "Server=192.168.1.6;Port=1990;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.99.100;Port=1990;Database=dmz;User Id=postgres;Password=root",
-  //"ConnectionString": "Server=localhost;Port=5432;Database=norya;User Id=postgres;Password=root",
+  "ConnectionString": "Server=localhost;Port=5432;Database=appbasic;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.1.6;Port=9501;Database=appbasic;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.1.6;Port=9700;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=114.34.173.85;Port=9501;Database=appbasic;User Id=postgres;Password=root",
