--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3.4'
 
 services:
 
-  app-infrastructure-database:
-    image: ${DockerHub_Registry}/app-infrastructure-database:${DockerImage_Tag}
-    build: ./apps-database
+  # app-infrastructure-database:
+  #   image: ${DockerHub_Registry}/app-infrastructure-database:${DockerImage_Tag}
+  #   build: ./apps-database
 
   # apps-base-apigateway:
   #   image: apps-base-apigateway:latest
@@ -18,11 +18,11 @@ services:
   #     context: .
   #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
-  # app-microservice-basic-api:
-  #   image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
-  #   build:
-  #     context: .
-  #     dockerfile: apps-legacy/ApiServer/Dockerfile
+  app-microservice-basic-api:
+    image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
+    build:
+      context: .
+      dockerfile: apps-legacy/ApiServer/Dockerfile
 
   # app-microservice-oms-api:
   #   image: ${DockerHub_Registry}/app-microservice-oms-api:${DockerImage_Tag}
