为产品规格添加宽深高参数

--- a/apps-oms/Apps.OMS.Service/appsettings.Development.json
+++ b/apps-oms/Apps.OMS.Service/appsettings.Development.json
@@ -7,8 +7,9 @@
     }
   },
   //"ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz_oms;User Id=postgres;Password=root",
-  "ConnectionString": "Server=localhost;Port=5432;Database=dmz_oms;User Id=postgres;Password=root",
-  "APIGatewayServer": "http://testapi.damaozhu.com.cn",
+  "ConnectionString": "Server=localhost;Port=5432;Database=appoms;User Id=postgres;Password=root",
+  //"ConnectionString": "Server=192.168.99.100;Port=9501;Database=appoms;User Id=postgres;Password=root",
+  "APIGatewayServer": "http://192.168.99.100:9503",
   "Plugins": {
     "OrderViewer": "http://testtool.damaozhu.com.cn/dmz-oms/order-viewer",
     "MediaShare": "http://testtool.damaozhu.com.cn/dmz-hd/share"
@@ -26,8 +27,8 @@
   },
   "ConsulConfig": {
     "Server": {
-      "IP": "192.168.1.6",
-      "Port": "8500"
+      "IP": "192.168.99.100",
+      "Port": "9502"
     },
     "Client": {
       "IP": "192.168.1.176",
