--- a/docker-deploy/development/.env
+++ b/docker-deploy/development/.env
@@ -1,3 +1,7 @@
+# Docker Hub
+DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
+DockerImage_Tag=yuanmin
+
 # Guid配置信息
 GuidSettings_ServerId=1
 GuidSettings_GuidSalt=1
@@ -8,31 +12,15 @@ PostgresDB_User=postgres
 PostgresDB_Password=root
 
 # 公司测试环境配置
-SECRETKEY_Dev=leon-develoment-key
-APIGatewayServer_Dev=http://192.168.99.100:5701
-MoreJeeSite_Dev=http://192.168.99.100:5705
-MoreJeeToolSite_Dev=http://192.168.99.100:5703
-JwtSettings_Issuer_Dev=damaozhu.com.cn
-JwtSettings_Audience_Dev=damaozhu.com.cn
-JwtSettings_SecretKey_Dev=damaozhu-dev-test-app
-JwtSettings_ExpiresDay_Dev=1
-ServerDB_Dev=dmz
-OMSServerDB_Dev=dmz_oms
-Plugins_OrderViewer_Dev=http://192.168.99.100:5703/dmz-oms/order-viewer
-Plugins_MediaShare_Dev=http://192.168.99.100:5703/dmz-hd/share
-
-
-# EHome环境
-SECRETKEY_EHome=leon-develoment-key
-APIGatewayServer_EHome=http://192.168.99.100:5801
-MoreJeeSite_EHome=http://192.168.99.100:5805
-MoreJeeToolSite_EHome=http://192.168.99.100:5803
-JwtSettings_Issuer_EHome=damaozhu.com.cn
-JwtSettings_Audience_EHome=damaozhu.com.cn
-JwtSettings_SecretKey_EHome=damaozhu-ehome-test-app
-JwtSettings_ExpiresDay_EHome=1
-ServerDB_EHome=dmz_ehome
-OMSServerDB_EHome=dmz_ehome_oms
-Plugins_OrderViewer_EHome=http://192.168.99.100:5803/dmz-oms/order-viewer
-Plugins_MediaShare_EHome=http://192.168.99.100:5803/dmz-hd/share
-
+SECRETKEY=company-norya-key
+APIGatewayServer=http://192.168.99.100:9503
+MoreJeeSite=http://192.168.99.100:9521
+MoreJeeToolSite=http://192.168.99.100:9522
+JwtSettings_Issuer=damaozhu.com.cn
+JwtSettings_Audience=damaozhu.com.cn
+JwtSettings_SecretKey=damaozhu-dev-test-app
+JwtSettings_ExpiresDay=1
+BasicServerDB=appbasic
+OMSServerDB=appoms
+Plugins_OrderViewer=http://192.168.99.100:9522/dmz-oms/order-viewer
+Plugins_MediaShare=http://192.168.99.100:9522/dmz-hd/share
