--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -17,8 +17,8 @@
     }
   },
   //"ConnectionString": "Server=192.168.1.6;Port=1990;Database=dmz;User Id=postgres;Password=root",
-  //"ConnectionString": "Server=192.168.99.100;Port=1990;Database=dmz;User Id=postgres;Password=root",
-  "ConnectionString": "Server=localhost;Port=5432;Database=norya;User Id=postgres;Password=root",
+  "ConnectionString": "Server=192.168.99.100;Port=9501;Database=appbasic;User Id=postgres;Password=root",
+  //"ConnectionString": "Server=localhost;Port=5432;Database=appbasic;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.1.6;Port=9700;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=114.34.173.85;Port=9501;Database=appbasic;User Id=postgres;Password=root",
@@ -47,8 +47,8 @@
   },
   "ConsulConfig": {
     "Server": {
-      "IP": "192.168.1.6",
-      "Port": "8500"
+      "IP": "192.168.99.100",
+      "Port": "9502"
     },
     "Client": {
       "IP": "192.168.1.176",
