--- a/docker-deploy/development/docker-compose.yml
+++ b/docker-deploy/development/docker-compose.yml
@@ -1,246 +1,151 @@
 version: '3.4'
 
 services:
-# MoreJee Database
-  dmzpostgresdb:
-    container_name: dmzpostgresdb-c
-    image: postgres:10.5
+
+# 1.app infrastructure
+# 1.1 postgres db
+  app-infrastructure-database:
+    container_name: app-infrastructure-database-c
+    image: ${DockerHub_Registry}/app-infrastructure-database:${DockerImage_Tag}
     volumes:
-      - "/var/bamboo/dmzpostgresdb/data:/var/lib/postgresql/data"
+      - "/var/morejee/app-infrastructure-database/data:/var/lib/postgresql/data"
+      - "/var/morejee/app-infrastructure-database/dbBackup:/var/lib/postgresql/dbBackup"
     environment:
       - POSTGRES_USER=${PostgresDB_User}
       - POSTGRES_PASSWORD=${PostgresDB_Password}
     ports:
-      - "5700:5432"
+      - "9501:5432"
     networks:
-      - dmzdevnet
-      - dmzehomenet
-# MoreJee Consul ( For Company Development )
-  dmzconsulservice-dev:
-    image: consul:latest
-    container_name: dmzconsulservice-dev-c
+      - morejeenet
+    restart: always
+# 1.2 consul
+  app-infrastructure-consul:
+    container_name: app-infrastructure-consul-c
+    image: consul:1.4.4
     command: agent -dev -client=0.0.0.0 -bind=0.0.0.0
     ports:
-      - "8500:8500"
+      - "9502:8500"
     networks:
-      - dmzdevnet
-# MoreJee APIGateway ( For Company Development )
-  apps-apigateway-dev:
-    container_name: apps-apigateway-dev-c
-    image: apps-base-apigateway:latest
+      - morejeenet
+    restart: always
+# 1.3 APIGateway
+  app-infrastructure-apigateway:
+    container_name: app-infrastructure-apigateway-c
+    image: ${DockerHub_Registry}/app-infrastructure-apigateway:${DockerImage_Tag}
     ports:
-      - "5701:80"
+      - "9503:80"
     volumes:
-      - "/var/bamboo/dmzapigateway/logs:/app/logs"
-    networks:
-      - dmzdevnet
+      - "/var/morejee/app-infrastructure-apigateway/logs:/app/logs"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Production
+    networks:
+      - morejeenet
     depends_on:
-      - dmzconsulservice-dev
-      - apps-legacy-basic-service-dev
-      - apps-oms-service-dev
-# MoreJee APIServer ( For Company Development )
-  apps-legacy-basic-service-dev:
-    container_name: apps-legacy-basic-service-dev-c
-    image: apps-legacy-basic-service:latest
+      - app-infrastructure-consul
+    restart: always
+# 2. app microservices
+# 2.1 basic ms
+  app-microservice-basic-api:
+    container_name: app-microservice-basic-api-c
+    image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
     volumes:
-      - "/var/bamboo/dmzapiserver/logs:/app/logs"
-      - "/var/bamboo/dmzapiserver/AppBackup:/app/wwwroot/AppBackup"
-      - "/var/bamboo/dmzapiserver/wwwroot/upload:/app/wwwroot/upload"
+      - "/var/morejee/app-microservice-basic-api/logs:/app/logs"
+      - "/var/morejee/app-microservice-basic-api/AppBackup:/app/wwwroot/AppBackup"
+      - "/var/morejee/app-microservice-basic-api/wwwroot/upload:/app/wwwroot/upload"
     environment:
       # JwtSettings
-      - JwtSettings:Issuer=${JwtSettings_Issuer_Dev}
-      - JwtSettings:Audience=${JwtSettings_Audience_Dev}
-      - JwtSettings:SecretKey=${JwtSettings_SecretKey_Dev}
-      - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay_Dev}
+      - JwtSettings:Issuer=${JwtSettings_Issuer}
+      - JwtSettings:Audience=${JwtSettings_Audience}
+      - JwtSettings:SecretKey=${JwtSettings_SecretKey}
+      - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay}
       # ConnectionString
-      - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=${ServerDB_Dev};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
-      # Plugins
-      - Plugins:OrderViewer=${Plugins_OrderViewer_Dev}
-      - Plugins:MediaShare=${Plugins_MediaShare_Dev}
-      # Consul
-      - ConsulConfig:Server:IP=dmzconsulservice-dev
-      - ConsulConfig:Server:Port=8500
-      - ConsulConfig:Client:IP=apps-legacy-basic-service-dev
-      - ConsulConfig:Client:Port=80
-    ports:
-      - "5702:80"
-    networks:
-      - dmzdevnet
-    depends_on:
-      - dmzpostgresdb
-      - apps-morejee-tool-dev
-      - dmzconsulservice-dev
-# MoreJee ToolSite ( For Company Development )
-  apps-morejee-tool-dev:
-    container_name: apps-morejee-tool-dev-c
-    image: apps-morejee-tool-site:latest
-    environment:
-      - APISERVER=${APIGatewayServer_Dev}
-    ports:
-      - "5703:4000"
-    networks:
-      - dmzdevnet
-# MoreJee OMS APIServer ( For Company Development )
-  apps-oms-service-dev:
-    container_name: apps-oms-service-dev-c
-    image: apps-oms-service:latest
-    volumes:
-      - "/var/bamboo/dmzomsserver/logs:/app/logs"
-      - "/var/bamboo/dmzomsserver/AppBackup:/app/wwwroot/AppBackup"
-    environment:
-      # JwtSettings
-      - JwtSettings:Issuer=${JwtSettings_Issuer_Dev}
-      - JwtSettings:Audience=${JwtSettings_Audience_Dev}
-      - JwtSettings:SecretKey=${JwtSettings_SecretKey_Dev}
-      - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay_Dev}
-      # ConnectionString
-      - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=${OMSServerDB_Dev};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
-      # Plugins
-      - Plugins:OrderViewer=${Plugins_OrderViewer_Dev}
-      - Plugins:MediaShare=${Plugins_MediaShare_Dev}
+      - ConnectionString=Server=app-infrastructure-database;Port=5432;Database=${BasicServerDB};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
       # APIGateway
-      - APIGatewayServer=${APIGatewayServer_Dev}
+      - APIGatewayServer=${APIGatewayServer}
+      # Plugins
+      - Plugins:OrderViewer=${Plugins_OrderViewer}
+      - Plugins:MediaShare=${Plugins_MediaShare}
       # Consul
-      - ConsulConfig:Server:IP=dmzconsulservice-dev
+      - ConsulConfig:Server:IP=app-infrastructure-consul
       - ConsulConfig:Server:Port=8500
-      - ConsulConfig:Client:IP=apps-legacy-basic-service-dev
+      - ConsulConfig:Client:IP=app-microservice-basic-api
       - ConsulConfig:Client:Port=80
     ports:
-      - "5704:80"
+      - "9511:80"
     networks:
-      - dmzdevnet
+      - morejeenet
     depends_on:
-      - dmzpostgresdb
-      - dmzconsulservice-dev
-# MoreJee Site ( For Company Development )
-  apps-morejee-site-dev:
-    container_name: apps-morejee-site-dev-c
-    image: apps-morejee-site:latest
-    environment:
-      - APISERVER=${APIGatewayServer_Dev}
-      - TOOLSERVER=${MoreJeeToolSite_Dev}
-      - SECRETKEY=${SECRETKEY_Dev}
-    ports:
-      - "5705:4000"
-    networks:
-      - dmzdevnet
-
-# # MoreJee Consul ( For Company EHome )
-#   dmzconsulservice-ehome:
-#     image: consul:latest
-#     container_name: dmzconsulservice-ehome-c
-#     command: agent -dev -client=0.0.0.0 -bind=0.0.0.0
-#     ports:
-#       - "8501:8500"
-#     networks:
-#       - dmzehomenet
-# # MoreJee APIGateway ( For EHome )
-#   apps-apigateway-ehome:
-#     container_name: apps-apigateway-ehome-c
-#     image: apps-base-apigateway:latest
-#     ports:
-#       - "5801:80"
+      - app-infrastructure-database
+      - app-infrastructure-apigateway
+    restart: always
+# # 2.2 oms ms
+#   app-microservice-oms-api:
+#     container_name: app-microservice-oms-api-c
+#     image: ${DockerHub_Registry}/app-microservice-oms-api:${DockerImage_Tag}
 #     volumes:
-#       - "/var/bamboo/ehomeapigateway/logs:/app/logs"
-#     environment:
-#       - ASPNETCORE_ENVIRONMENT=EHome
-#     networks:
-#       - dmzehomenet
-#     depends_on:
-#       - dmzconsulservice-ehome
-#       - apps-legacy-basic-service-ehome
-#       - apps-oms-service-ehome
-# # MoreJee APIServer ( For EHome )
-#   apps-legacy-basic-service-ehome:
-#     container_name: apps-legacy-basic-service-ehome-c
-#     image: apps-legacy-basic-service:latest
-#     volumes:
-#       - "/var/bamboo/ehomeapiserver/logs:/app/logs"
-#       - "/var/bamboo/ehomeapiserver/AppBackup:/app/wwwroot/AppBackup"
-#       - "/var/bamboo/ehomeapiserver/Attachments:/app/wwwroot/Attachments"
-#       - "/var/bamboo/dmzapiserver/wwwroot/upload:/app/wwwroot/upload" 
+#       - "/var/morejee/app-microservice-oms-api/logs:/app/logs"
+#       - "/var/morejee/app-microservice-oms-api/AppBackup:/app/wwwroot/AppBackup"
 #     environment:
 #       # JwtSettings
-#       - JwtSettings:Issuer=${JwtSettings_Issuer_EHome}
-#       - JwtSettings:Audience=${JwtSettings_Audience_EHome}
-#       - JwtSettings:SecretKey=${JwtSettings_SecretKey_EHome}
-#       - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay_EHome}
+#       - JwtSettings:Issuer=${JwtSettings_Issuer}
+#       - JwtSettings:Audience=${JwtSettings_Audience}
+#       - JwtSettings:SecretKey=${JwtSettings_SecretKey}
+#       - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay}
 #       # ConnectionString
-#       - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=${ServerDB_EHome};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
-#       - APIGatewayServer=apps-apigateway-ehome
+#       - ConnectionString=Server=app-infrastructure-database;Port=5432;Database=${OMSServerDB};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
 #       # Plugins
-#       - Plugins:OrderViewer=${Plugins_OrderViewer_EHome}
-#       - Plugins:MediaShare=${Plugins_MediaShare_EHome}
-#       # Consul
-#       - ConsulConfig:Server:IP=dmzconsulservice-ehome
-#       - ConsulConfig:Server:Port=8500
-#       - ConsulConfig:Client:IP=apps-legacy-basic-service-ehome
-#       - ConsulConfig:Client:Port=80
-#     ports:
-#       - "5802:80"
-#     networks:
-#       - dmzehomenet
-#     depends_on:
-#       - dmzpostgresdb
-#       - apps-morejee-tool-ehome
-#       - dmzconsulservice-ehome
-# # MoreJee ToolSite ( For EHome )
-#   apps-morejee-tool-ehome:
-#     container_name: apps-morejee-tool-ehome-c
-#     image: apps-morejee-tool-site:latest
-#     environment:
-#       - APISERVER=${APIGatewayServer_EHome}
-#     ports:
-#       - "5803:4000"
-#     networks:
-#       - dmzehomenet
-# # MoreJee OMS APIServer ( For EHome )
-#   apps-oms-service-ehome:
-#     container_name: apps-oms-service-ehome-c
-#     image: apps-oms-service:latest
-#     volumes:
-#       - "/var/bamboo/ehomeomsserver/logs:/app/logs"
-#       - "/var/bamboo/ehomeomsserver/AppBackup:/app/wwwroot/AppBackup"
-#     environment:
-#       # JwtSettings
-#       - JwtSettings:Issuer=${JwtSettings_Issuer_EHome}
-#       - JwtSettings:Audience=${JwtSettings_Audience_EHome}
-#       - JwtSettings:SecretKey=${JwtSettings_SecretKey_EHome}
-#       - JwtSettings:ExpiresDay=${JwtSettings_ExpiresDay_EHome}
-#       # ConnectionString
-#       - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=${OMSServerDB_EHome};User Id=${PostgresDB_User};Password=${PostgresDB_Password}
-#       # Plugins
-#       - Plugins:OrderViewer=${Plugins_OrderViewer_EHome}
-#       - Plugins:MediaShare=${Plugins_MediaShare_EHome}
+#       - Plugins:OrderViewer=${Plugins_OrderViewer}
+#       - Plugins:MediaShare=${Plugins_MediaShare}
 #       # APIGateway
-#       - APIGatewayServer=${APIGatewayServer_EHome}
+#       - APIGatewayServer=${APIGatewayServer}
 #       # Consul
-#       - ConsulConfig:Server:IP=dmzconsulservice-ehome
+#       - ConsulConfig:Server:IP=app-infrastructure-consul
 #       - ConsulConfig:Server:Port=8500
-#       - ConsulConfig:Client:IP=apps-oms-service-ehome
+#       - ConsulConfig:Client:IP=app-microservice-oms-api
 #       - ConsulConfig:Client:Port=80
 #     ports:
-#       - "5804:80"
+#       - "9512:80"
 #     networks:
-#       - dmzehomenet
+#       - morejeenet
 #     depends_on:
-#       - dmzpostgresdb
-#       - dmzconsulservice-ehome
-# # MoreJee Site ( For Company Development )
-#   apps-morejee-site-ehome:
-#     container_name: apps-morejee-site-ehome-c
-#     image: apps-morejee-site:latest
+#       - app-infrastructure-database
+#       - app-infrastructure-apigateway
+#     restart: always
+# # 3 app site
+# # 3.1 morejee site
+#   app-site-morejee:
+#     container_name: app-site-morejee-c
+#     image: ${DockerHub_Registry}/app-site-morejee:${DockerImage_Tag}
 #     environment:
-#       - APISERVER=${APIGatewayServer_EHome}
-#       - TOOLSERVER=${MoreJeeToolSite_EHome}
-#       - SECRETKEY=${SECRETKEY_EHome}
+#       - APISERVER=${APIGatewayServer}
+#       - TOOLSERVER=${MoreJeeToolSite}
+#       - SECRETKEY=${SECRETKEY}
+#       - OMSORDER2EXCELTOOLSERVER=${MoreJeeOMSToolSite}
 #     ports:
-#       - "5805:4000"
+#       - "9521:4000"
 #     networks:
-#       - dmzehomenet
-
+#       - morejeenet
+#     restart: always
+# # 3.2 tool site
+#   app-site-morejee-tool:
+#     container_name: app-site-morejee-tool-c
+#     image: ${DockerHub_Registry}/app-site-morejee-tool:${DockerImage_Tag}
+#     environment:
+#       - APISERVER=${APIGatewayServer}
+#     ports:
+#       - "9522:4000"
+#     networks:
+#       - morejeenet
+#     restart: always
+# # 3.3 oms tool site
+#   app-site-morejee-oms-tool:
+#     container_name: app-site-morejee-oms-tool-c
+#     image: ${DockerHub_Registry}/app-site-morejee-oms-tool:${DockerImage_Tag}
+#     ports:
+#       - "9523:3000"
+#     networks:
+#       - morejeenet
+#     restart: always
+    
 networks:
-  dmzdevnet:
-  dmzehomenet:
+  morejeenet:
