改动元皿服务器部署配置

--- a/docker-deploy/yuanmin/.env
+++ b/docker-deploy/yuanmin/.env
@@ -17,6 +17,7 @@ APIGatewayServer=http://morejeeapi.ilivingonline.com
 MoreJeeSite=http://morejeeadmin.ilivingonline.com
 MoreJeeToolSite=http://morejeetool.ilivingonline.com
 MoreJeeOMSToolSite=http://omstool.ilivingonline.com/dmz/oms/yuanmin/order2excel
+MoreJeeOMSToolSiteOfCustomer=http://omstool.ilivingonline.com/dmz/oms/yuanmin/order2excelcustomer
 JwtSettings_Issuer=ilivingonline.com
 JwtSettings_Audience=ilivingonline.com
 JwtSettings_SecretKey=yuanmin-production-app
