--- a/apps-legacy/ApiServer/Properties/launchSettings.json
+++ b/apps-legacy/ApiServer/Properties/launchSettings.json
@@ -8,6 +8,14 @@
     }
   },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": false,
+      "launchUrl": "/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "Development": {
       "commandName": "Project",
       "environmentVariables": {
