添加周老板挪亚家临时环境部署信息

--- a/docker-deploy/demoFoNorya/.env
+++ b/docker-deploy/demoFoNorya/.env
@@ -1,7 +1,7 @@
 # Application Setting
-VolumeBaseDirectory=morejeeOfNorya
-ApplicationStartPortPrefix=95
-ContainerSuffix=norya
+VolumeBaseDirectory=morejeeOfNoryaOfZhou
+ApplicationStartPortPrefix=97
+ContainerSuffix=zhou
 
 # Docker Hub
 DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
@@ -18,15 +18,15 @@ PostgresDB_Password=root
 
 # 环境配置
 SECRETKEY=company-norya-key
-APIGatewayServer=http://183.193.83.230:9503
-MoreJeeSite=http://183.193.83.230:9521
-MoreJeeToolSite=http://183.193.83.230:9522
-MoreJeeOMSToolSite=http://183.193.83.230:9523/dmz/oms/norya/order2excel
+APIGatewayServer=http://183.193.83.230:9703
+MoreJeeSite=http://183.193.83.230:9721
+MoreJeeToolSite=http://183.193.83.230:9722
+MoreJeeOMSToolSite=http://183.193.83.230:9723/dmz/oms/norya/order2excel
 JwtSettings_Issuer=norya.cn
 JwtSettings_Audience=norya.cn
 JwtSettings_SecretKey=norya-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://183.193.83.230:9522/dmz-oms/order-viewer
-Plugins_MediaShare=http://183.193.83.230:9522/dmz-hd/share
+Plugins_OrderViewer=http://183.193.83.230:9722/dmz-oms/order-viewer
+Plugins_MediaShare=http://183.193.83.230:9722/dmz-hd/share
