--- a/docker-deploy/demoFoNorya/docker-compose.yml
+++ b/docker-deploy/demoFoNorya/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}01:5432"
     networks:
-      - morejeenet
+      - morejeenetOfZhou
     restart: always
 # 1.2 consul
   app-infrastructure-consul:
@@ -26,7 +26,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}02:8500"
     networks:
-      - morejeenet
+      - morejeenetOfZhou
     restart: always
 # 1.3 APIGateway
   app-infrastructure-apigateway:
@@ -39,7 +39,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
     networks:
-      - morejeenet
+      - morejeenetOfZhou
     depends_on:
       - app-infrastructure-consul
     restart: always
@@ -51,7 +51,7 @@ services:
     volumes:
       - "/var/${VolumeBaseDirectory}/app-microservice-basic-api/logs:/app/logs"
       - "/var/${VolumeBaseDirectory}/app-microservice-basic-api/AppBackup:/app/wwwroot/AppBackup"
-      - "/var/${VolumeBaseDirectory}/app-microservice-basic-api/wwwroot/upload:/app/wwwroot/upload"
+      - "/var/morejeeOfNorya/app-microservice-basic-api/wwwroot/upload:/app/wwwroot/upload"
     environment:
       # JwtSettings
       - JwtSettings:Issuer=${JwtSettings_Issuer}
@@ -73,7 +73,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}11:80"
     networks:
-      - morejeenet
+      - morejeenetOfZhou
     depends_on:
       - app-infrastructure-database
       - app-infrastructure-apigateway
@@ -106,7 +106,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}12:80"
     networks:
-      - morejeenet
+      - morejeenetOfZhou
     depends_on:
       - app-infrastructure-database
       - app-infrastructure-apigateway
@@ -123,7 +123,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}21:4000"
     networks:
-      - morejeenet
+      - morejeenetOfZhou
     restart: always
 # 3.2 tool site
   app-site-morejee-tool:
@@ -135,7 +135,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}22:4000"
     networks:
-      - morejeenet
+      - morejeenetOfZhou
     restart: always
 # 3.3 oms tool site
   app-site-morejee-oms-tool:
@@ -144,8 +144,8 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}23:3000"
     networks:
-      - morejeenet
+      - morejeenetOfZhou
     restart: always
 
 networks:
-  morejeenet:
+  morejeenetOfZhou:
