添加整理资源的环境

--- a/docker-deploy/tidy/.env
+++ b/docker-deploy/tidy/.env
@@ -1,7 +1,7 @@
 # Application Setting
-VolumeBaseDirectory=morejeeOfNoryaOfZhou
+VolumeBaseDirectory=morejeeOfTidy
 ApplicationStartPortPrefix=97
-ContainerSuffix=zhou
+ContainerSuffix=tidy
 
 # Docker Hub
 DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
@@ -14,7 +14,7 @@ GuidSettings_GuidMinLen=8
 
 # 数据库配置信息
 PostgresDB_User=postgres
-PostgresDB_Password=root
+PostgresDB_Password=bambooAdmin2019
 
 # 环境配置
 SECRETKEY=company-norya-key
