--- a/docker-deploy/tidy/docker-compose.yml
+++ b/docker-deploy/tidy/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}01:5432"
     networks:
-      - morejeenetOfZhou
+      - morejeenetOfTidy
     restart: always
 # 1.2 consul
   app-infrastructure-consul:
@@ -26,7 +26,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}02:8500"
     networks:
-      - morejeenetOfZhou
+      - morejeenetOfTidy
     restart: always
 # 1.3 APIGateway
   app-infrastructure-apigateway:
@@ -39,7 +39,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
     networks:
-      - morejeenetOfZhou
+      - morejeenetOfTidy
     depends_on:
       - app-infrastructure-consul
     restart: always
@@ -73,7 +73,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}11:80"
     networks:
-      - morejeenetOfZhou
+      - morejeenetOfTidy
     depends_on:
       - app-infrastructure-database
       - app-infrastructure-apigateway
@@ -106,7 +106,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}12:80"
     networks:
-      - morejeenetOfZhou
+      - morejeenetOfTidy
     depends_on:
       - app-infrastructure-database
       - app-infrastructure-apigateway
@@ -123,7 +123,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}21:4000"
     networks:
-      - morejeenetOfZhou
+      - morejeenetOfTidy
     restart: always
 # 3.2 tool site
   app-site-morejee-tool:
@@ -135,7 +135,7 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}22:4000"
     networks:
-      - morejeenetOfZhou
+      - morejeenetOfTidy
     restart: always
 # 3.3 oms tool site
   app-site-morejee-oms-tool:
@@ -144,8 +144,8 @@ services:
     ports:
       - "${ApplicationStartPortPrefix}23:3000"
     networks:
-      - morejeenetOfZhou
+      - morejeenetOfTidy
     restart: always
 
 networks:
-  morejeenetOfZhou:
+  morejeenetOfTidy:
