--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
+DockerHub_Registry=registry.cn-shanghai.aliyuncs.com/leon-pu
 DockerImage_Tag=norya
