--- a/docker-deploy/norya/.env
+++ b/docker-deploy/norya/.env
@@ -1,5 +1,10 @@
+# Application Setting
+VolumeBaseDirectory=morejee
+ApplicationStartPortPrefix=95
+ContainerSuffix=norya
+
 # Docker Hub
-DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
+DockerHub_Registry=registry.cn-shanghai.aliyuncs.com/leon-pu
 DockerImage_Tag=norya
 
 # Guid配置信息
@@ -13,15 +18,15 @@ PostgresDB_Password=root
 
 # 环境配置
 SECRETKEY=company-norya-key
-APIGatewayServer=http://morejeeapi.norya.cn:9503
-MoreJeeSite=http://morejeeadmin.norya.cn:9521
-MoreJeeToolSite=http://morejeetool.norya.cn:9522
-MoreJeeOMSToolSite=http://119.145.104.11:9523/dmz/oms/norya/order2excel
+APIGatewayServer=http://120.197.140.199:9503
+MoreJeeSite=http://120.197.140.199:9521
+MoreJeeToolSite=http://120.197.140.199:9522
+MoreJeeOMSToolSite=http://120.197.140.199:9523/dmz/oms/norya/order2excel
 JwtSettings_Issuer=norya.cn
 JwtSettings_Audience=norya.cn
 JwtSettings_SecretKey=norya-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://morejeetool.norya.cn:9522/dmz-oms/order-viewer
-Plugins_MediaShare=http://morejeetool.norya.cn:9522/dmz-hd/share
+Plugins_OrderViewer=http://120.197.140.199:9522/dmz-oms/order-viewer
+Plugins_MediaShare=http://120.197.140.199:9522/dmz-hd/share
