添加周老板在我自己腾讯服务器的部署

--- a/docker-deploy/demo/.env
+++ b/docker-deploy/demo/.env
@@ -1,10 +1,10 @@
 # Application Setting
-VolumeBaseDirectory=morejeeOfDemoEnv
-ApplicationStartPortPrefix=96
+VolumeBaseDirectory=morejeeOfDemo
+ApplicationStartPortPrefix=95
 ContainerSuffix=d
 
 # Docker Hub
-DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
+DockerHub_Registry=registry.cn-shanghai.aliyuncs.com/leon-pu
 DockerImage_Tag=norya
 
 # Guid配置信息
@@ -14,19 +14,19 @@ GuidSettings_GuidMinLen=8
 
 # 数据库配置信息
 PostgresDB_User=postgres
-PostgresDB_Password=root
+PostgresDB_Password=morejeeAdminRoot
 
 # 环境配置
 SECRETKEY=company-norya-key
-APIGatewayServer=http://183.193.83.230:9603
-MoreJeeSite=http://183.193.83.230:9621
-MoreJeeToolSite=http://183.193.83.230:9622
-MoreJeeOMSToolSite=http://183.193.83.230:9623/dmz/oms/norya/order2excel
+APIGatewayServer=http://122.51.54.26:9503
+MoreJeeSite=http://122.51.54.26:9521
+MoreJeeToolSite=http://122.51.54.26:9522
+MoreJeeOMSToolSite=http://122.51.54.26:9523/dmz/oms/norya/order2excel
 JwtSettings_Issuer=norya.cn
 JwtSettings_Audience=norya.cn
 JwtSettings_SecretKey=norya-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://183.193.83.230:9622/dmz-oms/order-viewer
-Plugins_MediaShare=http://183.193.83.230:9622/dmz-hd/share
+Plugins_OrderViewer=http://122.51.54.26:9522/dmz-oms/order-viewer
+Plugins_MediaShare=http://122.51.54.26:9522/dmz-hd/share
