修改测试环境部署配置

--- a/docker-deploy/demo/.env
+++ b/docker-deploy/demo/.env
@@ -1,10 +1,11 @@
 # Application Setting
-VolumeBaseDirectory=morejeeOfDemo
-ApplicationStartPortPrefix=95
+VolumeBaseDirectory=morejeeOfDemoEnv
+ApplicationStartPortPrefix=96
 ContainerSuffix=d
 
 # Docker Hub
-DockerHub_Registry=registry.cn-shanghai.aliyuncs.com/leon-pu
+# DockerHub_Registry=registry.cn-shanghai.aliyuncs.com/leon-pu
+DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
 DockerImage_Tag=norya
 
 # Guid配置信息
@@ -14,19 +15,19 @@ GuidSettings_GuidMinLen=8
 
 # 数据库配置信息
 PostgresDB_User=postgres
-PostgresDB_Password=morejeeAdminRoot
+PostgresDB_Password=root
 
 # 环境配置
 SECRETKEY=company-norya-key
-APIGatewayServer=http://122.51.54.26:9503
-MoreJeeSite=http://122.51.54.26:9521
-MoreJeeToolSite=http://122.51.54.26:9522
-MoreJeeOMSToolSite=http://122.51.54.26:9523/dmz/oms/norya/order2excel
+APIGatewayServer=http://139.155.69.100:9603
+MoreJeeSite=http://139.155.69.100:9621
+MoreJeeToolSite=http://139.155.69.100:9622
+MoreJeeOMSToolSite=http://139.155.69.100:9623/dmz/oms/norya/order2excel
 JwtSettings_Issuer=norya.cn
 JwtSettings_Audience=norya.cn
 JwtSettings_SecretKey=norya-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://122.51.54.26:9522/dmz-oms/order-viewer
-Plugins_MediaShare=http://122.51.54.26:9522/dmz-hd/share
+Plugins_OrderViewer=http://139.155.69.100:9622/dmz-oms/order-viewer
+Plugins_MediaShare=http://139.155.69.100:9622/dmz-hd/share
