订单列表根据时间排序和隔离

--- a/apps-oms/Apps.OMS.Service/appsettings.Development.json
+++ b/apps-oms/Apps.OMS.Service/appsettings.Development.json
@@ -8,16 +8,16 @@
   },
   //"ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz_oms;User Id=postgres;Password=root",
   //"ConnectionString": "Server=localhost;Port=5432;Database=dmz_oms;User Id=postgres;Password=root",
-  "ConnectionString": "Server=183.193.83.230;Port=9501;Database=appoms;User Id=postgres;Password=root",
+  "ConnectionString": "Server=117.144.12.170;Port=9501;Database=appoms;User Id=postgres;Password=root",
   //"APIGatewayServer": "http://testapi.damaozhu.com.cn",
-  "APIGatewayServer": "http://183.193.83.230:9503",
+  "APIGatewayServer": "http://117.144.12.170:9503",
   "Plugins": {
     "OrderViewer": "http://testtool.damaozhu.com.cn/dmz-oms/order-viewer",
     "MediaShare": "http://testtool.damaozhu.com.cn/dmz-hd/share"
   },
   "JwtSettings": {
-    "Issuer": "damaozhu.com.cn",
-    "Audience": "damaozhu.com.cn",
+    "Issuer": "norya.cn",
+    "Audience": "norya.cn",
     "SecretKey": "norya-production-app",
     "ExpiresDay": 1
   },
