--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ services:
   #   image: ${DockerHub_Registry}/app-infrastructure-database:${DockerImage_Tag}
   #   build: ./apps-database
 
-  app-infrastructure-apigateway:
-    image: ${DockerHub_Registry}/app-infrastructure-apigateway:${DockerImage_Tag}
-    build:
-      context: .
-      dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
+  # app-infrastructure-apigateway:
+  #   image: ${DockerHub_Registry}/app-infrastructure-apigateway:${DockerImage_Tag}
+  #   build:
+  #     context: .
+  #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
   # app-microservice-basic-api:
   #   image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
@@ -18,11 +18,11 @@ services:
   #     context: .
   #     dockerfile: apps-legacy/ApiServer/Dockerfile
 
-  # app-microservice-oms-api:
-  #   image: ${DockerHub_Registry}/app-microservice-oms-api:${DockerImage_Tag}
-  #   build:
-  #     context: .
-  #     dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
+  app-microservice-oms-api:
+    image: ${DockerHub_Registry}/app-microservice-oms-api:${DockerImage_Tag}
+    build:
+      context: .
+      dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
 
   # basic-api-dev:
   #   image: apps-legacy-basic-service:latest
