--- a/docker-deploy/oushen/docker-compose.yml
+++ b/docker-deploy/oushen/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - POSTGRES_USER=${PostgresDB_User}
       - POSTGRES_PASSWORD=${PostgresDB_Password}
     ports:
-      - "5432:5432"
+      - "${ApplicationStartPortPrefix}01:5432"
     networks:
       - morejeenet
     restart: always
