元皿人员离职,域名取消

--- a/docker-deploy/yuanmin/.env
+++ b/docker-deploy/yuanmin/.env
@@ -13,16 +13,16 @@ PostgresDB_Password=root
 
 # 元皿环境配置
 SECRETKEY=company-yuanmin-key
-APIGatewayServer=http://morejeeapi.ilivingonline.com
-MoreJeeSite=http://morejeeadmin.ilivingonline.com
-MoreJeeToolSite=http://morejeetool.ilivingonline.com
-MoreJeeOMSToolSite=http://omstool.ilivingonline.com/dmz/oms/yuanmin/order2excel
-MoreJeeOMSToolSiteOfCustomer=http://omstool.ilivingonline.com/dmz/oms/yuanmin/order2excelcustomer
+APIGatewayServer=http://114.34.173.85:9503
+MoreJeeSite=http://114.34.173.85:9521
+MoreJeeToolSite=http://114.34.173.85:9522
+MoreJeeOMSToolSite=http://114.34.173.85:9523/dmz/oms/norya/order2excel
+MoreJeeOMSToolSiteOfCustomer=http://114.34.173.85:9523/dmz/oms/yuanmin/order2excelcustomer
 JwtSettings_Issuer=ilivingonline.com
 JwtSettings_Audience=ilivingonline.com
 JwtSettings_SecretKey=yuanmin-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://morejeetool.ilivingonline.com/dmz-oms/order-viewer
-Plugins_MediaShare=http://morejeetool.ilivingonline.com/dmz-hd/share
+Plugins_OrderViewer=http://114.34.173.85:9522/dmz-oms/order-viewer
+Plugins_MediaShare=http://114.34.173.85:9522/dmz-hd/share
